--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 CI= npm run build
-REACT_APP_GAME_NAME=JRWIdle
-REACT_APP_GAME_DESCRIPTION=An insanely powerful word game. by @mormoniucas / catholicclaus
+REACT_APP_GAME_NAME=Asterdle
+REACT_APP_GAME_DESCRIPTION=Just Aster. by @mormoniucas / catholicclaus
 REACT_APP_LOCALE_STRING=
